PDF: Fix "Select all" context menu item in forms on Mac.

There is a pre-existing bug on Mac where Control + A performs "Select
all" instead of Command + A. The equivalent context menu item just sends
the keystroke to perform "Select all". As such, when it tried to do the
right thing and use the Command modifier, "Select all" does not actually
work.

To fix this quickly, just make the context menu item send Control + A.
Of course this is not ideal, but making Command + A perform "Select all"
is harder than it appears.

BUG=834735,836074

Change-Id: I2c8201772d7e901984c427d0977a1fb899f802b5
Reviewed-on: https://chromium-review.googlesource.com/1025403
Reviewed-by: dsinclair <dsinclair@chromium.org>
Reviewed-by: Bill Budge <bbudge@chromium.org>
Commit-Queue: Lei Zhang <thestig@chromium.org>
Cr-Commit-Position: refs/heads/master@{#553264}
Former-commit-id: 842b2bad2021a93292f791f84cfba1e459343e7d